arc-script/arc-script-test/insta/src/snapshots/rust@ownership.arc.snap
---
source: arc-script-test/insta/src/lib.rs
expression: s
input_file: arc-script-test/insta/src/expect-fail/ownership.arc
---
[-- Found 1 errors --],
error: Double use of value of non-copyable type ~i32
  ┌─ /home/klas/Workspace/arc/arc-script/arc-script-test/insta/src/expect-fail/ownership.arc:2:6
  │
2 │     (s0, s0)
  │      ^^  ^^


